--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "semver-extra",
-  "version": "1.0.0",
-  "description": "semver-extra contains methods that aren't included in the vanilla semver package.",
+  "version": "1.0.1",
+  "description": "semver-extra contains useful methods that aren't included in the vanilla semver package.",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec ./test/*.js"
