--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "semver-extra",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "semver-extra contains useful methods that aren't included in the vanilla semver package.",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "semver",
+    "extra",
     "is",
     "stable",
     "pre-preleases",
